# odin-gpib

./: README.md  pyproject.toml  setup.cfg
src/odin_gpib/: adapter.py  gpibdevice.py  keithley2410.py  keithley2510.py
test/: test.py
test/config/: gpib_test.cfg
test/static/: index.html
test/static/css/: odin-server.css
test/static/js/: odin_server.js
