[metadata]
name =odin-gpib
description = ODIN GPIB device integration
url = https//github.com/stfc-aeg/odin-gpib
author = Josh Harris
author_email = josh.harris@stfc.ac.uk
license = Apache License 2.0
long_description = file: README
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =src
install_requires =
    pyvisa
    pyvisa-py
    git+https://github.com/odin-detector/odin-control.git@1.4.0#egg=odin-control

[options.packages.find]
where = src
